# demag-nonequi-layers

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  demag_nonequi_layers.py  run.sh  setup.py  test.py
.github/workflows/: docker-publish.yml
demag_nonequi_layers/: __init__.py  demag_nonequi_layers.cpp  demag_nonequi_layers.py
demag_nonequi_layers/lib/: demag_nonequi_layers.cpp
demag_nonequidistant/: CMakeLists.txt  demag_nonequidistant.cpp
